# sphere-tracing

./: .gitignore  CMakeLists.txt  LICENCE  README.md
benchmarking/: diffScenes.eps  perf_vs_input.eps  plots.eps  plotter.py  roofline.eps  runtime-plot.eps
benchmarking/benchmarks_scenechange/: flop-count_scene31_vect.csv  flop-count_scene32_lto.csv  flop-count_scene32_vect.csv  flop-count_scene33_lto.csv  flop-count_scene33_vect.csv  flop-count_scene34_lto.csv  flop-count_scene34_vect.csv  runtimes_scene31_lto.csv  runtimes_scene31_vect.csv  runtimes_scene32_lto.csv  runtimes_scene32_vect.csv  runtimes_scene33_lto.csv  runtimes_scene33_vect.csv  runtimes_scene34_lto.csv  runtimes_scene34_vect.csv
benchmarking/finalBenchmarks/: flop-count_scene31_algorithmic.csv  flop-count_scene31_base.csv  flop-count_scene31_lto_mathematical.csv  flop-count_scene31_mathematical.csv  flop-count_scene31_vectorized.csv  flop-count_scene34_alg.csv  flop-count_scene34_base.csv  flop-count_scene34_lto.csv  flop-count_scene34_vect.csv  runtimes_scene34_alg.csv  runtimes_scene34_base.csv  runtimes_scene34_lto.csv  runtimes_scene34_vect.csv  runtimes_scene34_vect_omp.csv
benchmarking/finalBenchmarks/old/: runtimes_scene31_algorithmic.csv  runtimes_scene31_lto.csv  runtimes_scene31_mathematical.csv  runtimes_scene31_stable_baseline.csv  runtimes_scene31_vectorized.csv  runtimes_scene31_vectorized_omp.csv
benchmarking/finalBenchmarks/size_comp/: flop-count_scene31_lto.csv  flop-count_scene32_lto.csv  flop-count_scene32_vect.csv  flop-count_scene33_lto.csv  flop-count_scene33_vect.csv  flop-count_scene34_lto.csv  flop-count_scene34_vect.csv  flop-count_scene35_lto.csv  flop-count_scene35_vect.csv  flop-count_scene36_lto.csv  flop-count_scene36_vect.csv  flop-count_scene37_lto.csv  flop-count_scene37_vect.csv  runtimes_scene31_lto.csv  runtimes_scene31_vect.csv  runtimes_scene32_lto.csv  runtimes_scene32_vect.csv  runtimes_scene33_lto.csv  runtimes_scene33_vect.csv  runtimes_scene34_lto.csv  runtimes_scene34_vect.csv  runtimes_scene35_lto.csv  runtimes_scene35_vect.csv  runtimes_scene36_lto.csv  runtimes_scene36_vect.csv  runtimes_scene37_lto.csv  runtimes_scene37_vect.csv
benchmarks/: CMakeLists.txt  microbenchmark-df.txt  run_benchmark.py  runtimes_scene5.csv  sphere_benchmark.cpp  sphere_microbenchmark.cpp
cmake/: build_type.cmake  sphere.pc.in  sphereConfig.cmake.in
doc/: doxygen.config
examples/: CMakeLists.txt  sphere_miniapp.cpp
scenes/: README  scene0.json  scene1.json  scene2.json  scene3.json  scene31.json  scene32.json  scene33.json  scene34.json  scene4.json  scene5.json  scene6.json  scene_generator.py
src/sphere/: CMakeLists.txt  CustomVector.cpp  CustomVector.h  ImageClasses.cpp  ImageClasses.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SphereBenchmark.cpp  SphereBenchmark.h  SphereMicroBenchmark.cpp  SphereMicroBenchmark.h  SphereProfiler.h  SphereShapes.cpp  SphereShapes.h  SphereTypes.h
tests/unit/: CMakeLists.txt  test_utils.cpp
